GNOME Bugzilla – Bug 120842
Regression: can't click on checkbox labels to set/clear checkbox
Last modified: 2004-12-22 21:47:04 UTC
One of the recent patches to the glade file seems to have changed the way the checkbox 'headers' work ... before you could click the label (e.g. "Enable Slow Keys") to set/clear the checkbox, just like a regular checkbox, but now it seems to be two separate controls and you have to actually click the tiny box. This is really bad for both accessibility (does the unlabelled checkbox have any accessible description? even if it does it makes the tab chain much longer) and usability (works completely differently from any other checkbox).
Also a usability bug because it makes the clickable target area harder to acquire (smaller)
This change occurred in CVS version 1.10 of the glade file gnome-accessibility-keyboard-properties.glade when an attempt was made to make the text in the GtkCheckButton bold.
Hrmm, I was sure it had worked more recently than that, if not I guess it was my fault all along :)
Created attachment 19656 [details] [review] Proposed patch
It looks like the change which caused this problem was an attempt to display the label associated with a check box in bold text. What was done was to create a label beside the check box with text in bold. This explains why it it is nececcsary to click on the box instead of on the text. The proposed patch undoes that change. The text will no longer appear in bold. It would require API additions to allow the text in a check box to appear in bold.
Yup that was the problem. 1) cleaned glade file to merge label and checkboxes again 2) left the markup inplace 3) added some code to manually tweak the label in the buttons to enable markup.