http://bugzilla.gnome.org/show_bug.cgi?id=120842 Remove bone headed

2003-10-28  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=120842
	* gnome-accessibility-keyboard-properties.glade : Remove bone headed
	  spitting of checkbox and label.
	* accessibility-keyboard.c (setup_toggles) : It was probably done so
	  that the headers could be made bold.